Profiler : * Fixes table headers alignment in request/response page

--- a/src/resources/scss/pages/requests/requests.scss
+++ b/src/resources/scss/pages/requests/requests.scss
@@ -67,7 +67,8 @@
       }
 
       @at-root #requests-container th {
-        padding : 1rem;
+        padding    : 1rem;
+        text-align : left;
       }
 
       @at-root #requests-container td,
